# delta-collectors

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  install.sh  opencanary.conf  pyproject.toml  setup.py
.github/workflows/: ci.yml  docker-latest.yml  docker-release.yml  lint.yml
data/hydra/: common-passwords-short.txt  common-passwords.txt  snmp-word-list-short.txt
delta/: __init__.py  collector_queue.py  logging.py  main.py  migration.py  runner.py  scheduler.py  scratch.py  uploader.py
delta/collectors/: collector.py
delta/collectors/hydra/: __init__.py
delta/collectors/netdiscover/: __init__.py
delta/collectors/netdiscover_local/: __init__.py
delta/collectors/nmap/: __init__.py
delta/collectors/wifi_auth/: __init__.py
delta/collectors/wifi_signal/: __init__.py
delta/util/: iwd.py
tests/delta/: test_scratch.py
